--- a/ngsw-config.json
+++ b/ngsw-config.json
@@ -49,6 +49,20 @@
                 "maxAge": "0",
                 "timeout": "20s"
             }
-        }
+        },
+        {
+            "name": "api-freshness",
+            "urls": [
+              "https://fonts.googleapis.com/**",
+              "https://use.fontawesome.com/**",
+              "/openmrs/ws/rest/v1/visit/**"
+            ],
+            "cacheConfig": {
+              "strategy": "freshness",
+              "maxSize": 1000,
+              "maxAge": "0",
+              "timeout": "20s"
+            }
+          }
     ]
 }
